--- a/.github/workflows/statusCheck.yml
+++ b/.github/workflows/statusCheck.yml
@@ -7,7 +7,7 @@ on:
   repository_dispatch:
   schedule:
     # 0th min, 5th hour (5:00 UTC time = 0:00 EST), every 1st and 4th day of each week (Mon/Thu)
-    - cron: '0 10 * * 1,4'
+    - cron: '0 10 * * *'
 
 jobs:
   build:
